<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPressure">

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/txtDate"
        app:layout_constraintBottom_toTopOf="@+id/editTextTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTahird" />

    <TextView
        android:id="@+id/txtPressureDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtPressureDown"
        app:layout_constraintBottom_toTopOf="@+id/editPressureDown"
        app:layout_constraintEnd_toEndOf="@+id/editPressureDown"
        app:layout_constraintTop_toBottomOf="@+id/editPressureUp" />

    <TextView
        android:id="@+id/txtPressureUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/txtPressureUp"
        app:layout_constraintBottom_toTopOf="@+id/editPressureUp"
        app:layout_constraintEnd_toEndOf="@+id/editPressureUp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editPulse"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxTahird"
        app:layout_constraintStart_toStartOf="@+id/editPressureDown"
        app:layout_constraintTop_toBottomOf="@+id/txtPulse" />

    <EditText
        android:id="@+id/editPressureDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editPressureDown"
        app:layout_constraintBottom_toTopOf="@+id/txtPulse"
        app:layout_constraintStart_toStartOf="@+id/editPressureUp"
        app:layout_constraintTop_toBottomOf="@+id/txtPressureDown" />

    <EditText
        android:id="@+id/editPressureUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editPressureUp"
        app:layout_constraintBottom_toTopOf="@+id/txtPressureDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPressureUp" />

    <TextView
        android:id="@+id/txtPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPulse"
        app:layout_constraintBottom_toTopOf="@+id/editPulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPressureDown" />

    <CheckBox
        android:id="@+id/checkBoxTahird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/checkBoxTahird"
        app:layout_constraintBottom_toTopOf="@+id/txtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPulse" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:onClick="clickSaveButtonPressure"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toTopOf="@+id/btnBackPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <Button
        android:id="@+id/btnBackPressure"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:onClick="btnBackPressure"
        android:text="@string/btnBackPressure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTime"
        app:layout_constraintEnd_toStartOf="@+id/editTextTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTime" />

</androidx.constraintlayout.widget.ConstraintLayout>